--- a/App.config
+++ b/App.config
@@ -1,5 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+	<connectionStrings>
+		<!-- This section contains the connection string info.
+		Special note: if the DB doesn't exists than it will be automatically created 
+		during the application load
+		-->
+		<add name="BaliloHotel" connectionString="mongodb://localhost:27017/Balilo" />
+	</connectionStrings>
+	<!-- For bulk activities file path - will be changed later-->
+	<appSettings>
+		<add key="ExternalFileBulkActivities" value="C:\path\to\csv"/>
+	</appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
