--- a/App.config
+++ b/App.config
@@ -5,12 +5,8 @@
 		Special note: if the DB doesn't exists than it will be automatically created 
 		during the application load
 		-->
-		<add name="BaliloHotel" connectionString="mongodb://localhost:27017/Balilo" />
+		<add name="MyMongo" connectionString="mongodb://localhost:27017/BaliloHotel050623" />
 	</connectionStrings>
-	<!-- For bulk activities file path - will be changed later-->
-	<appSettings>
-		<add key="ExternalFileBulkActivities" value="C:\path\to\csv"/>
-	</appSettings>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
 	</startup>
