--- a/FinalProject.csproj
+++ b/FinalProject.csproj
@@ -173,6 +173,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUForm.Designer.cs">
+      <DependentUpon>GUForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\Example.cs" />
     <Compile Include="Models\Guests.cs" />
     <Compile Include="Models\RoomManagement.cs" />
@@ -188,6 +194,9 @@
     </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUForm.resx">
+      <DependentUpon>GUForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
