--- a/FinalProject.csproj
+++ b/FinalProject.csproj
@@ -181,9 +181,16 @@
     </Compile>
     <Compile Include="Models\Example.cs" />
     <Compile Include="Models\Guests.cs" />
+    <Compile Include="Models\Orders.cs" />
     <Compile Include="Models\RoomManagement.cs" />
     <Compile Include="Models\RoomStatus.cs" />
     <Compile Include="Models\RoomType.cs" />
+    <Compile Include="OrderForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OrderForm.Designer.cs">
+      <DependentUpon>OrderForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UDForm.cs">
@@ -197,6 +204,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUForm.resx">
       <DependentUpon>GUForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OrderForm.resx">
+      <DependentUpon>OrderForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
